src/test/resources/scripts/language/parser/valid/function/functionReturn.sbsc
// test a simple function that returns a value

test = (a: str): str -> {
    return a;
};


assert(test("bazinga") == "bazinga");


return true;