src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/negativeSupplierFunctionDeclared.sbsc
// this function returns type NUM, we should not be able to negate it
a = (): num -> 0.4;
-a;

return false;